@@ -233,7 +233,7 @@ public interface DomibusPropertyMetadataManagerSPI {
     String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_LEVEL = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_PREFIX + "level";
     String DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_SUBJECT = DOMIBUS_ALERT_PLUGIN_USER_ACCOUNT_ENABLED_PREFIX + "subject";
     String DOMIBUS_ALERT_PARTITION_EXPIRATION_PREFIX = "domibus.alert.partition.expiration";
-    String DOMIBUS_ALERT_PARTITION_EXPIRATION_PREFIX_FREQUENCY_DAYS = DOMIBUS_ALERT_PARTITION_EXPIRATION_PREFIX + ".frequency_days";//NOSONAR
+    String DOMIBUS_ALERT_PARTITION_EXPIRATION_PREFIX_FREQUENCY_DAYS = DOMIBUS_ALERT_PARTITION_EXPIRATION_PREFIX + ".frequency_days";
     String DOMIBUS_PULL_REQUEST_SEND_PER_JOB_CYCLE = "domibus.pull.request.send.per.job.cycle";
     String DOMIBUS_PULL_REQUEST_FREQUENCY_RECOVERY_TIME = "domibus.pull.request.frequency.recovery.time";
     String DOMIBUS_PULL_REQUEST_FREQUENCY_ERROR_COUNT = "domibus.pull.request.frequency.error.count";
