@@ -61,4 +61,14 @@ jms.uniform.distributed.queue.0.loadbalancing.ramdom=false
 jms.uniform.distributed.queue.0.delivery.failure.redelivery.limit=0
 jms.uniform.distributed.queue.0.delivery.failure.expiration.policy=Discard
 
-jms.uniform.distributed.queue.items=1
+jms.uniform.distributed.queue.1.name=DomibusEArchiveQueue
+jms.uniform.distributed.queue.1.jndi.name=jms/domibus.internal.earchive.queue
+jms.uniform.distributed.queue.1.subdeployment.name=${jms.queue.subdeployment.name}
+jms.uniform.distributed.queue.1.module.name=${jms.module.name}
+jms.uniform.distributed.queue.1.default.target.enable=false
+jms.uniform.distributed.queue.1.loadbalancing.ramdom = false
+jms.uniform.distributed.queue.1.delivery.failure.redelivery.limit=0
+jms.uniform.distributed.queue.1.delivery.failure.expiration.policy=Discard
+jms.uniform.distributed.queue.1.delivery.params.redeliverydelay=1000
+
+jms.uniform.distributed.queue.items=2
