@@ -51,7 +51,15 @@ jms.queue.0.module.name=${jms.module.name}
 jms.queue.0.delivery.failure.redelivery.limit=0
 jms.queue.0.delivery.failure.expiration.policy=Discard
 
+jms.queue.1.name=DomibusEArchiveQueue
+jms.queue.1.jndi.name=jms/domibus.internal.earchive.queue
+jms.queue.1.subdeployment.name=${jms.queue.subdeployment.name}
+jms.queue.1.module.name=${jms.module.name}
+jms.queue.1.delivery.failure.redelivery.limit=0
+jms.queue.1.delivery.failure.expiration.policy=Discard
+jms.queue.1.delivery.params.redeliverydelay=1000
+
 ############################################################
 ## Queue index
 ############################################################
-jms.queue.items = 1
+jms.queue.items = 2
