@@ -1,4 +1,7 @@
 Domibus 5.0
+- Add alert when expired partition cannot be deleted
+- New RetentionWorker to delete entire expired partition
+- Add message tables partitioning sql scripts
 - EARCHIVING: allows archiving messages sent / received
 - ProcessingType allowing to specify if the message should be pushed or pulled has been added in all the domibus plugins.
 - new sequence for id generation (in Oracle: sequence, in mysql H2: Table) of the format: yyMMddHHDDDDDDDDDD (ex: 210809150000000050)
